<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>me.glindholm.eclipse.plugin</groupId>
    <artifactId>csvedit</artifactId>
    <version>2.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>csvedit :: parent</name>
    <description>csvedit parent</description>

    <properties>
        <java.version>17</java.version>
        <maven.version>3.0</maven.version>
        <tycho.version>4.0.2</tycho.version>
        <tycho.test.jvmArgs>-Xmx512m -XX:MaxPermSize=256m</tycho.test.jvmArgs>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <github-update-repo>
            git@github.com:gnl42/CsvEdit2-update.git</github-update-repo>
        <github-local-clone>${project.build.directory}/checkout</github-local-clone>
        <releases-directory>${github-local-clone}/releases</releases-directory>
        <current-release-directory>${releases-directory}/${qualifiedVersion}</current-release-directory>
        <!-- The label for the Composite sites -->
        <site.label>CsvEdit2-update</site.label>
        <eclipse.version>2023-06</eclipse.version>
    </properties>

    <scm>
        <connection>scm:git@github.com:gnl42/CsvEdit2.git</connection>
        <developerConnection>scm:git@github.com:gnl42/CsvEdit2.git</developerConnection>
        <url>https://github.com/gnl42/CsvEdit2</url>
    </scm>


    <repositories>
        <repository>
            <id>latest</id>
            <layout>p2</layout>
            <url>http://download.eclipse.org/releases/2023-06</url>
        </repository>
    </repositories>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.5.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>3.12.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>3.1.1</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>build-helper-maven-plugin</artifactId>
                    <version>3.4.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-report-plugin</artifactId>
                    <version>3.1.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <version>3.3.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.3.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>3.3.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jxr-plugin</artifactId>
                    <version>3.3.0</version>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>tycho-compiler-plugin</artifactId>
                    <version>${tycho.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>tycho-maven-plugin</artifactId>
                    <version>${tycho.version}</version>
                    <extensions>true</extensions>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>tycho-p2-repository-plugin</artifactId>
                    <version>${tycho.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>tycho-source-plugin</artifactId>
                    <version>${tycho.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.tycho.extras</groupId>
                    <artifactId>tycho-source-feature-plugin</artifactId>
                    <version>${tycho.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>tycho-p2-plugin</artifactId>
                    <version>${tycho.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>tycho-versions-plugin</artifactId>
                    <version>${tycho.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>tycho-p2-director-plugin</artifactId>
                    <version>${tycho.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>tycho-surefire-plugin</artifactId>
                    <version>${tycho.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>target-platform-configuration</artifactId>
                    <version>${tycho.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.tycho.extras</groupId>
                    <artifactId>tycho-eclipserun-plugin</artifactId>
                    <version>${tycho.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.tycho.extras</groupId>
                    <artifactId>tycho-pack200a-plugin</artifactId>
                    <version>${tycho.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.tycho.extras</groupId>
                    <artifactId>tycho-pack200b-plugin</artifactId>
                    <version>${tycho.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.cbi.maven.plugins</groupId>
                    <artifactId>eclipse-jarsigner-plugin</artifactId>
                    <version>1.4.2</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-compiler-plugin</artifactId>
                <configuration>
                    <release>17</release>
                    <optimize>true</optimize>
                    <showWarnings>true</showWarnings>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-maven-plugin</artifactId>
                <extensions>true</extensions>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-p2-repository-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-packaging-plugin</artifactId>
                <version>${tycho.version}</version>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.1.0</version>

            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>plugin-source</id>
                        <goals>
                            <goal>plugin-source</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>feature-source</id>
                        <phase>package</phase>
                        <goals>
                            <goal>feature-source</goal>
                        </goals>
                        <configuration>
                            <excludes>
                                <plugin id="com.google.guava" />
                                <plugin id="com.google.inject" />
                                <plugin id="org.apache.batik.pdf" />
                                <plugin id="org.apache.log4j" />
                                <plugin id="org.apache.batik.bridge" />
                                <plugin id="org.apache.batik.css" />
                                <plugin id="org.apache.batik.dom" />
                                <plugin id="org.apache.batik.dom.svg" />
                                <plugin id="org.apache.batik.ext.awt" />
                                <plugin id="org.apache.batik.parser" />
                                <plugin id="org.apache.batik.svggen" />
                                <plugin id="org.apache.batik.transcoder" />
                                <plugin id="org.apache.batik.util" />
                                <plugin id="org.apache.batik.util.gui" />
                                <plugin id="org.apache.batik.xml" />
                                <plugin id="org.apache.commons.lang" />
                                <plugin id="org.eclipse.m2m.qvt.oml.project" />
                                <plugin id="org.eclipse.m2m.qvt.oml.runtime" />
                                <plugin id="org.eclipse.xtend.shared.ui" />
                                <plugin id="org.eclipse.xwt.ui.workbench" />
                                <plugin
                                    id="org.eclipse.wst.common.project.facet.core" />
                            </excludes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-p2-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-p2-metadata</id>
                        <phase>package</phase>
                        <goals>
                            <goal>p2-metadata</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-versions-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-surefire-plugin</artifactId>
                <configuration>
                    <failIfNoTests>false</failIfNoTests>
                    <useUIHarness>true</useUIHarness>
                    <useUIThread>true</useUIThread>
                    <!--<showEclipseLog>true</showEclipseLog> -->
                    <!--<testFailureIgnore>true</testFailureIgnore> -->
                    <argLine>${ui.test.vmargs}</argLine>
                    <bundleStartLevel>
                        <bundle>
                            <id>org.eclipse.equinox.launcher</id>
                            <level>4</level>
                            <autoStart>true</autoStart>
                        </bundle>
                    </bundleStartLevel>
                    <dependencies>
                        <!--                        <dependency>-->
                        <!--                            <type>p2-installable-unit</type>-->
                        <!--                            <artifactId>org.eclipse.equinox.ds</artifactId>-->
                        <!--                        </dependency>-->
                        <dependency>
                            <type>p2-installable-unit</type>
                            <artifactId>org.eclipse.equinox.event</artifactId>
                        </dependency>
                    </dependencies>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>target-platform-configuration</artifactId>
                <configuration>
                    <environments>
                        <environment>
                            <os>linux</os>
                            <ws>gtk</ws>
                            <arch>x86_64</arch>
                        </environment>
                        <environment>
                            <os>win32</os>
                            <ws>win32</ws>
                            <arch>x86_64</arch>
                        </environment>
                        <environment>
                            <os>macosx</os>
                            <ws>cocoa</ws>
                            <arch>x86_64</arch>
                        </environment>
                    </environments>
                    <target>
                        <artifact>
                            <groupId>me.glindholm.eclipse.plugin</groupId>
                            <artifactId>csvedit.target</artifactId>
                            <version>2.0.0-SNAPSHOT</version>
                        </artifact>
                    </target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <!-- Activate this profile to perform the release to GitHub Pages -->
            <id>release-composite</id>
            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <artifactId>maven-install-plugin</artifactId>
                            <executions>
                                <execution>
                                    <id>default-install</id>
                                    <phase>none</phase>
                                </execution>
                            </executions>
                        </plugin>
                        <plugin>
                            <artifactId>maven-deploy-plugin</artifactId>
                            <configuration>
                                <skip>true</skip>
                            </configuration>
                        </plugin>
                    </plugins>
                </pluginManagement>
            </build>
        </profile>
    </profiles>
    <modules>
        <module>csvedit.target</module>
        <module>csvedit.plugin</module>
        <module>csvedit.plugin.ui</module>
        <module>csvedit.feature</module>
        <module>csvedit.site</module>
    </modules>
</project>